add new feature to create a new customer
