# model/customer/customer.go
@@ -1,0 +1,13 @@
+package customer
+
+import "time"
+
+type Customer struct {
+	CreatedAt    time.Time
+	Id           uint32
+	IsBorrower   bool
+	IsDelinquent bool
+	Name         string
+	PhoneNumber  string
+	UpdatedAt    time.Time
+}
